--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -34,14 +34,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter Description"
-        android:layout_above="@+id/saveButton"
-        android:enabled="false"/>
+        android:layout_above="@+id/saveButton"/>
 
     <Button
         android:id="@+id/saveButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add Location"
+        android:enabled="false"
         android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
