--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -1,26 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <include layout="@layout/includes_toolbar"/>
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/latitudeTextView" />
-
-    <TextView
-        android:id="@+id/latitudeTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/longitudeTextView" />
-
-    <TextView
-        android:id="@+id/longitudeTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/titleEditText" />
+        android:layout_above="@+id/titleEditText"
+        android:layout_below="@+id/toolbar" />
 
     <EditText
         android:id="@+id/titleEditText"
